# trinami.org

./: .gitignore  hugo.toml  index.html
assets/rust_app/: Cargo.toml  README.md
assets/rust_app/pkg/: package.json  rust_app.d.ts  rust_app.js  rust_app_bg.wasm  rust_app_bg.wasm.d.ts
assets/rust_app/src/: lib.rs  message.rs
assets/rust_app/src/symmetric/: aes.rs  camellia.rs  cipher.rs  gift.rs  kuznyechik.rs  magma.rs  mod.rs  serpent.rs  sm4.rs  threefish.rs  twofish.rs  xtea.rs
assets/rust_app/www/: index.js
assets/sass/: main.scss
content/: _index.md  contact.md
content/projects/: index.md
layouts/_default/: baseof.html
layouts/shortcodes/: wasm_app.html
resources/_gen/assets/sass/: main.scss_8eb8c3e1c83e81a3be17b8e96be1a8e3.content
static/fonts/: fira_code.css
static/js/: encrypt.js
