[package]
name = "rust_app"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.100"
generic-array = "1.2.0"
hex = "0.4.3"
getrandom = { version = "0.3.2", features = ["wasm_js"] }
rand = { package = "rand", version = "0.9.1" }
rand_rsa = { package = "rand", version = "0.8.5" }
getrandom_rsa = { package = "getrandom", version = "0.2.16", features = ["js"] }
base64 = "0.22.1"

#hash
jh = "0.1.0"
skein = "0.1.0"
streebog = "0.10.2"
sm3 = "0.4.2"
sha3 = "0.10.8"
shabal = "0.4.1" #
fsb = "0.1.3"
ascon-hash = "0.3.0"
sha2 = "0.10.8"
blake2 = "0.10.6" #
ripemd = "0.1.3"
whirlpool = "0.10.4"
tiger = "0.2.1"
blake3 = "1.8.1"
argon2 = "0.5.3" #

#cipher
chacha20 = "0.9.1"
cipher = "0.4.4"
xtea = "=0.0.1-pre.0"
camellia = "0.1.0"
threefish = "0.5.2"
magma = "0.9.0"
sm4 = "0.5.1"
kuznyechik = "0.8.2"
gift-cipher = "=0.0.1-pre.0"
serpent = "0.5.1"
twofish = "0.7.1"
aes = "0.8.4"

#sign+pubkey encryption
#pqcrypto-wasi = "0.14.4"
#pqcrypto= { version = "0.18.1", features = ["no-std"] }
ed25519-dalek = "2.1.1"
x25519-dalek = "2.0.1"
rsa = "0.9.8"

[lib]
crate-type = ["cdylib", "rlib"]
